@@ -5,6 +5,8 @@ examples/ex3.pl
 examples/ex4.pl
 examples/ex5.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -19,12 +21,12 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Class-Utils/00-use.t
-t/Class-Utils/01-version.t
-t/Class-Utils/02-pod_coverage.t
-t/Class-Utils/03-pod.t
-t/Class-Utils/04-set_params.t
-t/Class-Utils/05-set_params_pub.t
-t/Class-Utils/06-set_split_params.t
-t/Class-Utils/07-split_params.t
+t/Class-Utils/01-use.t
+t/Class-Utils/02-version.t
+t/Class-Utils/03-set_params.t
+t/Class-Utils/04-set_params_pub.t
+t/Class-Utils/05-set_split_params.t
+t/Class-Utils/06-split_params.t
 Utils.pm
+xt/Class-Utils/01-pod_coverage.t
+xt/Class-Utils/02-pod.t
