@@ -3,15 +3,10 @@ abstract: 'Class utilities.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
-  Cwd: 0
   English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Spec::Functions: 0
-  FindBin: 0
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -27,6 +22,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure: 0.09
   Exporter: 0
